fixed dark mode in skill screen

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -139,7 +139,11 @@ body * {
 
 .comic-button.primary {
   background-color: var(--ink-color);
-  color: #fff;
+  color: var(--paper-color);
+}
+
+.App.dark-mode .comic-button.primary {
+  color: #000;
 }
 
 
